--- a/.github/workflows/buf.yaml
+++ b/.github/workflows/buf.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Buf build/lint/format/breaking
+      - name: Buf build/lint/format/breaking/push
         uses: bufbuild/buf-action@v1
         with:
-          push: false # we don't use buf push
+          token: ${{ secrets.BUF_TOKEN }}
