--- a/.github/workflows/buf.yaml
+++ b/.github/workflows/buf.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches: [main]
   pull_request:
+    types: [ opened, synchronize, reopened, labeled, unlabeled ]
   merge_group:
     branches: ["**"]
 
